--- a/Wijesiri.Motors.WebApp/src/index.html
+++ b/Wijesiri.Motors.WebApp/src/index.html
@@ -6,9 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="CoreUI - Free Angular Admin Template">
-  <meta name="author" content="Łukasz Holeczek">
-  <meta name="keyword" content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript">
+  <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
   <link rel="shortcut icon" href="assets/img/favicon.png">
   <title>WMS - Workshop Management System</title>
 </head>
